# Interval_Vector_Matrix

./: .gitignore  CMakeLists.txt  README.md
benchmark/: exp_fst_speed.cpp  exp_speed.cpp  matrix_avx_multicore_add.cpp  matrix_avx_multicore_ctor.cpp  matrix_avx_multicore_ctor_list.cpp  matrix_avx_multicore_div_scl.cpp  matrix_avx_multicore_mlt.cpp  matrix_avx_multicore_mlt_scl.cpp  matrix_avx_multicore_sub.cpp  matrix_speed.cpp  matrix_speed_add.cpp  matrix_speed_ctor.cpp  matrix_speed_ctor_list.cpp  matrix_speed_div_scl.cpp  matrix_speed_mlt.cpp  matrix_speed_mlt_scl.cpp  matrix_speed_sub.cpp  vector_speed.cpp  vector_speed_add.cpp  vector_speed_ctor.cpp  vector_speed_ctor_list.cpp  vector_speed_div_scl.cpp  vector_speed_mlt_scl.cpp  vector_speed_sub.cpp
include/: BatchSwitchMatrixAVX512_Grouped.hpp  BatchSwitchMatrixAVX_Grouped.hpp  BatchSwitchMatrixMixed.hpp  BatchSwitchMatrix_Grouped.hpp  BatchSwitchVectorAVX512_Grouped.hpp  BatchSwitchVectorAVX_G256.hpp  BatchSwitchVectorAVX_Grouped.hpp  BatchSwitchVectorMixed.hpp  BatchSwitchVector_Grouped.hpp  EqualityComparable.hpp  Interval.hpp  IntervalProxy.hpp  MatrixBasic.hpp  Utilities.hpp  VecMacAll.hpp  VectorBasic.hpp
src/: Interval.cpp  internal.cpp  main.cpp
